fixed some alignments on download page

--- a/misc/main.css
+++ b/misc/main.css
@@ -241,3 +241,12 @@ html, body {
     width: 100%;
     height: auto;
 }
+
+/*added by gabrycaos*/
+.button-fixed-width {
+  width: 120px !important;
+  padding: 0;
+}
+.button-margin {
+  margin-bottom: 10px;
+}
